[package]
name = "pallet-acurast-vesting"
version = "0.2.0"
license = "MIT"
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false
repository = "https://github.com/acurast/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
acurast-common = { path = "../acurast/common", default-features = false }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-core = { workspace = true, optional = true }
pallet-balances = { workspace = true, optional = true }
pallet-uniques = { workspace = true, optional = true }
pallet-timestamp = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-arithmetic = { workspace = true }

serde = { version = "1.0.188", features = ["derive"], default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
pallet-balances = { workspace = true }
pallet-uniques = { workspace = true }
pallet-timestamp = { workspace = true }
hex-literal = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"sp-runtime/std",
	"acurast-common/std",
	"pallet-uniques/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-io",
	"sp-core",
	"pallet-balances/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"hex-literal",
]
try-runtime = ["frame-support/try-runtime"]
