[package]
name = "acurast-mainnet-runtime"
authors = { workspace = true }
description = "Acurast Mainnet Runtime"
version = { workspace = true }
license = "Unlicense"
keywords = ["no_std", "no-std"]
categories = ["no-std"]
homepage = "https://docs.acurast.com/"
edition = "2021"
publish = false
repository = "https://github.com/acurast/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }
derive_more = { workspace = true }

# Acurast
pallet-acurast = { workspace = true }
pallet-acurast-marketplace = { workspace = true }
pallet-acurast-fee-manager = { workspace = true }
acurast-p256-crypto = { workspace = true }
pallet-acurast-processor-manager = { workspace = true }
pallet-acurast-compute = { workspace = true }
pallet-acurast-hyperdrive = { workspace = true }
pallet-acurast-hyperdrive-ibc = { workspace = true }
pallet-acurast-hyperdrive-token = { workspace = true }
pallet-acurast-rewards-treasury = { workspace = true }
pallet-acurast-candidate-preselection = { workspace = true }

acurast-runtime-common = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-support = { workspace = true }
frame-support-procedural = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-referenda = { workspace = true }
pallet-conviction-voting = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-uniques = { workspace = true }
pallet-multisig = { workspace = true }
pallet-utility = { workspace = true }
pallet-collator-selection = { workspace = true }
pallet-vesting = { workspace = true }
sp-arithmetic = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-genesis-builder = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }
pallet-message-queue = { workspace = true }

# Polkadot
pallet-xcm = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }
polkadot-core-primitives = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-pallet-weight-reclaim = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
parachains-common = { workspace = true }
parachain-info = { workspace = true }
cumulus-primitives-aura = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"log/std",
	"scale-info/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-weight-reclaim/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-referenda/std",
	"pallet-conviction-voting/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-uniques/std",
	"pallet-multisig/std",
	"pallet-acurast/std",
	"pallet-acurast-fee-manager/std",
	"pallet-acurast-marketplace/std",
	"pallet-acurast-processor-manager/std",
	"pallet-acurast-compute/std",
	"pallet-acurast-hyperdrive/std",
	"pallet-acurast-hyperdrive-ibc/std",
	"pallet-acurast-hyperdrive-token/std",
	"pallet-acurast-candidate-preselection/std",
	"pallet-vesting/std",
	"acurast-runtime-common/std",
	"polkadot-runtime-common/std",
	"sp-arithmetic/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"acurast-p256-crypto/std",
	"pallet-collator-selection/std",
	"frame-support-procedural/std",
	"cumulus-primitives-aura/std",
]

runtime-benchmarks = [
	"frame-system-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-referenda/runtime-benchmarks",
	"pallet-conviction-voting/runtime-benchmarks",
	"pallet-acurast/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks",
	"pallet-acurast-fee-manager/runtime-benchmarks",
	"pallet-acurast-processor-manager/runtime-benchmarks",
	"pallet-acurast-compute/runtime-benchmarks",
	"pallet-acurast-hyperdrive/runtime-benchmarks",
	"pallet-acurast-hyperdrive-ibc/runtime-benchmarks",
	"pallet-acurast-hyperdrive-token/runtime-benchmarks",
	"pallet-acurast-candidate-preselection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-uniques/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-weight-reclaim/runtime-benchmarks",
	"acurast-runtime-common/runtime-benchmarks",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"cumulus-pallet-weight-reclaim/try-runtime",
]

emulation = []
allow-faucet = ["frame-support-procedural/allow-faucet"]
